[add]バリデーションの追加

--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -14,5 +14,6 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <title>プロフィール</title>
 </head>
 <body class="bg-light">
-	ここはプロフィールです
+	<a class="nav-item nav-link" th:href="@{/profile/edit}">プロフィール</a>
 </body>
+</html>
