--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -14,6 +14,36 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <title>プロフィール</title>
 </head>
 <body class="bg-light">
-	<a class="nav-item nav-link" th:href="@{/profile/edit}">プロフィール</a>
+	<!-- ヘッダー -->
+	<nav layout:replace="~{layout/header::header}"></nav>
+	<div class="content">
+		<div class="header border-bottom">
+			<h1 class="h2">プロフィール</h1>
+		</div>
+		<div th:object="${profileForm}">
+			<table class="table table-striped table-bordered table-hover">
+				<tbody>
+					<tr>
+						<th class="w-25">名前</th>
+						<td th:text="*{name}"></td>
+					</tr>
+					<tr>
+						<th>誕生日</th>
+						<td th:text="*{#dates.format(birthday, 'YYYY/MM/dd')}"></td>
+					</tr>
+					<tr>
+						<th>年齢</th>
+						<td th:text="*{age}"></td>
+					</tr>
+					<tr>
+						<th>性別</th>
+						<td th:text="*{gender == 1? '男性':'女性'}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<a class="nav-item nav-link" th:href="@{/profile/edit}">プロフィール編集</a>
+	
 </body>
 </html>
