--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -5,24 +5,21 @@ layout:decorate="~{main/top}">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- CSS読込 -->
-<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-<link rel="stylesheet" th:href="@{/css/head/head.css}">
-<!--  JS読込 -->
-<script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <title>日記アプリ</title>
 </head>
-<body class="bg-light">
 	<nav layout:fragment="header">
 		<div class="fixed-top">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="#">DiaryApp</a>
-				<a class="nav-item nav-link" th:href="@{/digest/digest}">ダイジェスト</a>
-				<a class="nav-item nav-link" th:href="@{/contribute/contribute}">投稿</a>
-				<a class="nav-item nav-link" th:href="@{/profile/profile}">プロフィール</a>
-			</nav>
+			 <ul class="navbar-expand-lg justify-content-end navbar-nav bg-dark main-nav d-flex align-items-center">
+			<li class="nav-item">
+       			<a class=" nav-item nav-link text-white mr-5 digest" th:href="@{/digest/digest}">ダイジェスト</a>
+      			</li>
+      			<li class="nav-item">
+        		<a class="contribute nav-item nav-link text-white mr-5" th:href="@{/contribute/contribute}">投稿</a>
+     			 </li>
+     			 <li class="nav-item">
+     			 <a class="profile-edit nav-item nav-link text-white mr-5" th:href="@{/profile/edit}">プロフィール編集</a>
+     			 </li>
+    		</ul>
 		</div>
 	</nav>
 </html>
