--- a/src/main/resources/templates/digest/digest.html
+++ b/src/main/resources/templates/digest/digest.html
@@ -7,12 +7,27 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!-- CSS読込 -->
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <link rel="stylesheet" th:href="@{/css/head/head.css}">
+<link rel="stylesheet" th:href="@{/css/top/calendar.css}">
+<link rel="stylesheet" th:href="@{/css/top/profile.css}">
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <!--  JS読込 -->
 <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" th:src="@{/js/top/calendar.js}"></script>
 <title>ダイジェスト</title>
 </head>
 <body class="bg-light">
-	ここはダイジェスト画面です
+	<!-- ヘッダー -->
+	<nav layout:replace="~{layout/header::header}"></nav>
+	<div class="container" style="max-width: none; margin-top: 55px;">
+		<div class="row">
+			<div class="col-3 sidebar-content" >
+				<nav layout:replace="~{layout/sidebar::sidebar}"></nav>
+			</div>
+			<div class="col main-content">
+				<p>ここはダイジェスト画面です</p>
+			</div>
+		</div>
+	</div>
 </body>
