--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -11,7 +11,7 @@ layout:decorate="~{main/top}">
 		<div class="fixed-top">
 			 <ul class="navbar-expand-lg justify-content-end navbar-nav bg-dark main-nav d-flex align-items-center">
 			<li class="nav-item">
-       			<a class=" nav-item nav-link text-white mr-5 digest" th:href="@{/digest/digest}">ダイジェスト</a>
+       			<a class=" nav-item nav-link text-white mr-5 digest" th:href="@{/main/top}">トップ</a>
       			</li>
       			<li class="nav-item">
         		<a class="contribute nav-item nav-link text-white mr-5" th:href="@{/contribute/contribute}">投稿</a>
