--- a/src/main/resources/templates/main/top.html
+++ b/src/main/resources/templates/main/top.html
@@ -9,6 +9,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <link rel="stylesheet" th:href="@{/css/head/head.css}">
 <link rel="stylesheet" th:href="@{/css/top/calendar.css}">
 <link rel="stylesheet" th:href="@{/css/top/profile.css}">
+<link rel="stylesheet" th:href="@{/css/top/top.css}">
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@1.3.6/dist/quill.bubble.css" />
 <!--  JS読込 -->
@@ -39,6 +40,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 		diaries.forEach(function(diary) {
 			var day = formatDate(new Date(diary.day));
+			console.log(diary.id);
 			contents += `
 			<div class="d-flex flex-column mt-3 bg-light border border-dark">
 				<div class="pl-3 pr-3 bd-highlight row">
@@ -48,6 +50,15 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<div class="p-4 bd-highlight row">
 					<div class="col-2 d-flex border-right border-dark align-items-center justify-content-center"><img src="${diary.face}"style="width:70px; height:70px"></img></div>
 					<div class="col  editor ml-3">${diary.text}</div>
+				</div>
+				<div class="m-3 text-right">
+					<form th:action="@{/top}" method="post">
+						<input class="d-none" type="text" name="ID" value="${diary.id}">
+						<button type="submit" name="delete" class="delete btn btn-danger text-light"> 削除</button>
+						<button type="submit" name="edit" class="edit btn btn-info text-light"> 編集</button>
+					</form>
+					
+
 				</div>
 			</div>
 			`;
@@ -66,8 +77,10 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<script type="text/javascript" th:inline="javascript">
 	/*<![CDATA[*/
 	const profile = /*[[${profileForm}]]*/
+	
+	console.log('profile');
 	const userPhoto = /*[[${defaultImage}]]*/
-	console.log(profile);
+	console.log(profile)
 	if(profile.name == '未登録') {
 		$('#profile_name').text('未登録');
 	}
