[add] 検索機能の追加/ 日記を月ごとに表示する機能の追加

--- a/src/main/resources/templates/contribute/contribute.html
+++ b/src/main/resources/templates/contribute/contribute.html
@@ -95,6 +95,11 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	</script>
 	<script type="text/javascript" th:inline="javascript">
 	/*<![CDATA[*/
+	
+	window.onload = function() {
+			showProcess(showDate);
+			console.log('初期表示')
+	}
 	const profile = /*[[${profileForm}]]*/
 	const userPhoto = /*[[${defaultImage}]]*/
 	console.log(profile);
