--- a/src/main/resources/static/css/top/top.css
+++ b/src/main/resources/static/css/top/top.css
@@ -13,3 +13,12 @@
 	font-weight: 900;
 	color: white;
 }
+
+.search_submit::before {
+	content: '\f002';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
+	color: black;
+}
+
+
