--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -17,7 +17,12 @@ layout:decorate="~{main/top}">
         		<a class="contribute nav-item nav-link text-white mr-5" th:href="@{/contribute/contribute}">投稿</a>
      			 </li>
      			 <li class="nav-item">
-     			 <a class="profile-edit nav-item nav-link text-white mr-5" th:href="@{/profile/edit}">プロフィール編集</a>
+     			 <th:block th:if = "${profileForm == null}">
+     			 	<a class="profile-edit nav-item nav-link text-white mr-5" th:href="@{/profile/new}">新規プロフィール作成</a>
+     			 </th:block>
+     			 <th:block th:if = "${!(profileForm == null)}">
+     			 	<a class="profile-edit nav-item nav-link text-white mr-5" th:href="@{/profile/edit}">プロフィール編集</a>
+     			 </th:block>
      			 </li>
     		</ul>
 		</div>
