--- a/src/main/resources/templates/profile/new.html
+++ b/src/main/resources/templates/profile/new.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org" 
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
@@ -26,7 +26,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<nav layout:replace="~{layout/sidebar::sidebar}"></nav>
 			</div>
 			<div class="col main-content">
-				<form id="profileEdit-form" method="post" action="/profile/edit" class="form-profileEdit center-block ml-5 mr-5" th:object="${profileForm}">
+				<form id="profileEdit-form" method="post" action="/profile/new" class="form-profileEdit center-block ml-5 mr-5" th:object="${profileForm}">
 					<h1 class="text-center mb-4" th:text="#{profile.edit.title}"></h1>
 					<!-- プロフィール写真 -->
 					<div class="form-group">
